Enable the plugin

--- a/mypy.ini
+++ b/mypy.ini
@@ -4,6 +4,7 @@
 
 [mypy]
 python_version = 3.10
+plugins = sqlalchemy.ext.mypy.plugin
 show_error_codes = true
 follow_imports = silent
 ignore_missing_imports = true
